--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,8 @@
   --link-hover-color: #1d3ecf;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback, sans-serif;
-  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
+  --body-font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B", Helvetica, sans-serif;
+  --heading-font-family: "Sentinel A", "Sentinel B", georgia, serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -42,13 +42,13 @@
 
 /* fallback fonts */
 @font-face {
-  font-family: roboto-condensed-fallback;
+  font-family: sentinal-a-light;
   size-adjust: 88.82%;
   src: local('Arial');
 }
 
 @font-face {
-  font-family: roboto-fallback;
+  font-family: sentinal-a-light;
   size-adjust: 99.529%;
   src: local('Arial');
 }
