--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,14 +12,26 @@
 
 :root {
   /* colors */
-  --background-color: white;
+  --background-color: #d6d6d6;
   --light-color: #f8f8f8;
   --dark-color: #505050;
-  --text-color: #131313;
-  --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --text-color: #333f48;
+  --link-color: #fff;
+  --link-hover-color: #fff;
+  --color-background-primary: #000000;
+  --color-background-secondary: #333f48;
+  --color-background-tertiary: #262626;
+  --color-background-quaternary: #192631;
 
-  /* fonts */
+  /* buttons */
+  --color-button-primary: #fff;
+  --color-button-primary-border: #40596b;
+  --color-button-primary-hover: #fafafa;
+  --color-button-primary-border-hover: #c8102e;
+  --color-button-secondary: #fff;
+  --color-button-secondary-text: #40596b;
+
+    /* fonts */
   --body-font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B", Helvetica, sans-serif;
   --heading-font-family: "Sentinel A", "Sentinel B", georgia, serif;
 
@@ -29,26 +41,28 @@
   --body-font-size-xs: 17px;
 
   /* heading sizes */
-  --heading-font-size-xxl: 55px;
+  --heading-font-size-xxl: 75px;
   --heading-font-size-xl: 44px;
-  --heading-font-size-l: 34px;
+  --heading-font-size-l: 36px;
   --heading-font-size-m: 27px;
   --heading-font-size-s: 24px;
   --heading-font-size-xs: 22px;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 300px;
+
+  --max-content-size: 1440px;
 }
 
 /* fallback fonts */
 @font-face {
-  font-family: sentinal-a-light;
+  font-family: "Sentinel A";
   size-adjust: 88.82%;
   src: local('Arial');
 }
 
 @font-face {
-  font-family: sentinal-a-light;
+  font-family: "Sentinel A";
   size-adjust: 99.529%;
   src: local('Arial');
 }
@@ -56,14 +70,14 @@
 @media (width >= 900px) {
   :root {
     /* body sizes */
-    --body-font-size-m: 18px;
-    --body-font-size-s: 16px;
-    --body-font-size-xs: 14px;
+    --body-font-size-m: 16px;
+    --body-font-size-s: 14px;
+    --body-font-size-xs: 12px;
 
     /* heading sizes */
-    --heading-font-size-xxl: 45px;
-    --heading-font-size-xl: 36px;
-    --heading-font-size-l: 28px;
+    --heading-font-size-xxl: 75px;
+    --heading-font-size-xl: 44px;
+    --heading-font-size-l: 36px;
     --heading-font-size-m: 22px;
     --heading-font-size-s: 20px;
     --heading-font-size-xs: 18px;
@@ -73,10 +87,11 @@
 body {
   display: none;
   margin: 0;
-  background-color: var(--background-color);
+  /* background-color: var(--background-color); */
   color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
+  font-weight: 400;
   line-height: 1.6;
 }
 
@@ -107,7 +122,7 @@ h6 {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
-  font-weight: 600;
+  font-weight: 300;
   line-height: 1.25;
   scroll-margin: 40px;
 }
@@ -142,6 +157,10 @@ pre {
   white-space: pre;
 }
 
+main {
+  background-color: var(--content-background-color);
+}
+
 main > div {
   margin: 40px 16px;
 }
@@ -162,7 +181,7 @@ a:any-link {
 
 a:hover {
   color: var(--link-hover-color);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /* buttons */
@@ -171,29 +190,34 @@ button {
   box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
-  margin: 12px 0;
-  border: 2px solid transparent;
-  border-radius: 2.4em;
-  padding: 0.5em 1.2em;
+  margin: 16px 16px 0;
+  background-color: var(--color-button-primary);
+  border: 1px solid var(--color-button-primary-border);
+  padding: 17px 36px 17px;
+  text-transform: uppercase;
   font-family: var(--body-font-family);
-  font-style: normal;
+  /* font-style: normal;
   font-weight: 500;
-  line-height: 1.25;
+  line-height: 1.25; */
   text-align: center;
   text-decoration: none;
-  background-color: var(--link-color);
-  color: var(--background-color);
+  color: var(--color-button-primary-border);
+  font-size: .875rem !important;
+  line-height: 1.1428571429em;
+    
   cursor: pointer;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  transition: color .25s ease, background-color .25s, border-color .25s ease;
 }
 
 a.button:hover,
 a.button:focus,
 button:hover,
 button:focus {
-  background-color: var(--link-hover-color);
+  border-color: var(--color-button-primary-border-hover);
+  background-color: var(--color-button-primary-hover);
   cursor: pointer;
 }
 
@@ -203,11 +227,20 @@ button:disabled:hover {
   cursor: unset;
 }
 
+a.button.secondary:hover,
+a.button.secondary:focus,
+button.secondary:hover,
+button.secondary:focus {
+  background-color: var(--color-button-primary);
+  color: var(--color-button-primary-border);
+  transition: color .25s ease, background-color .25s, border-color .25s ease;
+}
+
 a.button.secondary,
 button.secondary {
-  background-color: unset;
-  border: 2px solid currentcolor;
-  color: var(--text-color);
+  font-style: normal;
+  background-color: var(--color-background-secondary);
+  color: var(--color-button-primary)
 }
 
 main img {
@@ -229,11 +262,12 @@ main img {
 
 /* sections */
 main > .section {
-  margin: 40px 0;
+  max-width: var(--max-content-size);
+  margin: auto;
 }
 
 main > .section > div {
-  max-width: 1200px;
+  max-width: var(--max-content-size);
   margin: auto;
   padding: 0 24px;
 }
@@ -260,3 +294,38 @@ main .section.highlight {
   display: none;
 }
 
+
+.section.secondary {
+  color: #fff;
+  background-color: var(--color-background-secondary);
+}
+
+.section.secondary-light {
+  background-color: var(--color-background-secondary-light);
+}
+
+.section.quaternary {
+  color: #fff;
+  background-color: var(--color-background-quaternary);
+}
+
+main .section.columns.center ul {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  padding: 24px 0;
+}
+
+main .section.columns.center ul > li {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+main .section.columns.center picture {
+  width: 30px;
+  height: 30px;
+}
