--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,9 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: var(--background-color);
+  background-color: var(--content-background-color);
   width: 100%;
-  z-index: 2;
-  position: fixed;
+  /* z-index: 2;
+  position: fixed; */
 }
 
 header nav {
@@ -33,10 +33,11 @@ header nav[aria-expanded='true'] {
 @media (width >= 900px) {
   header nav {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 0 32px;
-    max-width: 1264px;
-    padding: 0 32px;
+    max-width: var(--max-content-size);
+    padding: 0;
   }
 
   header nav[aria-expanded='true'] {
@@ -157,6 +158,11 @@ header nav .nav-sections {
   visibility: hidden;
 }
 
+header nav .nav-sections img {
+  width: auto;
+  height: 24px;
+}
+
 header nav[aria-expanded='true'] .nav-sections {
   display: block;
   visibility: visible;
@@ -265,4 +271,13 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+}
+
+.section.secondary {
+  text-align: center;
+  flex-grow: 2;
+  width: 100%;
+  color: #fff;
+  padding: 16px 0;
+  background-color: var(--color-background-secondary);
 }
