--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,11 @@
 footer {
-  background-color: var(--light-color);
+  background-color: #e9e9e9;
+  color: #333;
   font-size: var(--body-font-size-xs);
+}
+
+footer a:any-link {
+  color: #666;
 }
 
 footer .footer > div {
