--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,9 +1,9 @@
 .cards > ul {
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 72px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(440px, 1fr));
   grid-gap: 24px;
 }
 
