--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,4 +22,33 @@ footer .footer p {
   footer .footer > div {
     padding: 40px 32px 24px;
   }
+
+  footer .section.social-links ul {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    list-style: none;
+  }
+
+  footer .section.social-links ul a:first-child {
+    background-color: #8d8d8d;
+    border-radius: 50%;
+    display: block;
+    height: 22px;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 22px;
+  }
+
+  footer .section.social-links img {
+    width: 22px;
+    height: 22px;
+  }
+
+  footer .section.languages img {
+    display: inline-block;
+    height: 11px;
+    width: 16px;
+    background-position: -32px -132px;
+  }
 }
