--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@
   --text-color: #333f48;
   --link-color: #fff;
   --link-hover-color: #fff;
-  --color-background-primary: #000000;
+  --color-background-primary: #000;
   --color-background-secondary: #333f48;
   --color-background-tertiary: #262626;
   --color-background-quaternary: #192631;
@@ -32,7 +32,7 @@
   --color-button-secondary-text: #40596b;
 
     /* fonts */
-  --body-font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B", Helvetica, sans-serif;
+  --body-font-family: "Gotham Narrow SSm A", "Gotham Narrow SSm B", helvetica, sans-serif;
   --heading-font-family: "Sentinel A", "Sentinel B", georgia, serif;
 
   /* body sizes */
@@ -50,7 +50,6 @@
 
   /* nav height */
   --nav-height: 300px;
-
   --max-content-size: 1440px;
 }
 
@@ -87,7 +86,6 @@
 body {
   display: none;
   margin: 0;
-  /* background-color: var(--background-color); */
   color: var(--text-color);
   font-family: var(--body-font-family);
   font-size: var(--body-font-size-m);
@@ -193,18 +191,14 @@ button {
   margin: 16px 16px 0;
   background-color: var(--color-button-primary);
   border: 1px solid var(--color-button-primary-border);
-  padding: 17px 36px 17px;
+  padding: 17px 36px;
   text-transform: uppercase;
   font-family: var(--body-font-family);
-  /* font-style: normal;
-  font-weight: 500;
-  line-height: 1.25; */
   text-align: center;
   text-decoration: none;
   color: var(--color-button-primary-border);
   font-size: .875rem !important;
-  line-height: 1.1428571429em;
-    
+  line-height: 1.1429em;
   cursor: pointer;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -227,6 +221,13 @@ button:disabled:hover {
   cursor: unset;
 }
 
+a.button.secondary,
+button.secondary {
+  font-style: normal;
+  background-color: var(--color-background-secondary);
+  color: var(--color-button-primary)
+}
+
 a.button.secondary:hover,
 a.button.secondary:focus,
 button.secondary:hover,
@@ -234,13 +235,6 @@ button.secondary:focus {
   background-color: var(--color-button-primary);
   color: var(--color-button-primary-border);
   transition: color .25s ease, background-color .25s, border-color .25s ease;
-}
-
-a.button.secondary,
-button.secondary {
-  font-style: normal;
-  background-color: var(--color-background-secondary);
-  color: var(--color-button-primary)
 }
 
 main img {
