--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,9 +56,7 @@
 /* fallback fonts */
 @font-face {
   font-family: 'Sentinel Fallback';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Arial');
+  src: local('Times New Roman');
   ascent-override: 96.00%;
   descent-override: 24.00%;
   line-gap-override: 0.00%;
@@ -67,8 +65,6 @@
 
 @font-face {
   font-family: 'Gotham Narrow SSm Fallback';
-  font-style: normal;
-  font-weight: 400;
   src: local('Arial');
   ascent-override: 96.00%;
   descent-override: 24.00%;
