--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,36 +4,42 @@ header .nav-wrapper {
   width: 100%;
 }
 
+header .header {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0 24px;
+  margin: auto;
+  height: var(--nav-height);
+  padding: 0 24px;
+  font-family: var(--body-font-family);
+  font-size: var(--body-font-size-s);
+}
+
 header nav {
   box-sizing: border-box;
   display: grid;
   grid-template:
-    'hamburger brand tools' var(--nav-height)
+    'hamburger brand tools' auto
     'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
-  gap: 0 24px;
-  margin: auto;
-  max-width: 1248px;
-  height: var(--nav-height);
+  margin: 0;
   padding: 0 24px;
   font-family: var(--body-font-family);
 }
 
 header nav[aria-expanded='true'] {
   grid-template:
-    'hamburger brand' var(--nav-height)
+    'hamburger brand' auto
     'sections sections' 1fr
-    'tools tools' var(--nav-height) / auto 1fr;
+    'tools tools' auto / auto 1fr;
   overflow-y: auto;
   min-height: 100dvh;
 }
 
 @media (width >= 900px) {
-  header nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 0 32px;
+  header .header {
     max-width: var(--max-content-size);
     padding: 0;
   }
@@ -136,15 +142,17 @@ header nav[aria-expanded='true'] .nav-hamburger-icon::after {
 
 /* brand */
 header .nav-brand {
+  align-self: baseline;
   grid-area: brand;
   flex-basis: 128px;
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
+  padding: 3px 15px;
 }
 
 header nav .nav-brand img {
-  width: 128px;
+  width: 140px;
   height: auto;
 }
 
@@ -156,7 +164,7 @@ header nav .nav-sections {
   visibility: hidden;
 }
 
-header nav .nav-sections img {
+header nav .nav-tools img {
   width: auto;
   height: 24px;
 }
@@ -174,7 +182,30 @@ header nav .nav-sections ul {
 }
 
 header nav .nav-sections ul > li {
-  font-weight: 500;
+  font-weight: 400;
+}
+
+header nav .nav-sections ul > li a {
+  color: #333;
+  text-decoration: none;
+}
+
+header nav .nav-sections ul > li a:hover,
+header nav .nav-sections ul > li a:focus {
+  text-decoration: underline;
+}
+
+header .section.top div ul > li a,
+header .section.top div ul > li a:hover,
+header .section.top div ul > li a:focus {
+  text-decoration: none;
+}
+
+header nav .nav-tools ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 header nav .nav-sections ul > li > ul {
@@ -186,10 +217,29 @@ header nav .nav-sections ul > li > ul > li {
 }
 
 @media (width >= 900px) {
+  header nav,
+  header nav[aria-expanded='true'] {
+    box-sizing: border-box;
+    display: grid;
+    grid-template:
+      'brand sections tools' 1fr / 20% 70% auto;
+    align-items: center;
+    padding: 20px 10px;
+    font-family: var(--body-font-family);
+  }
+
+  header nav {
+    padding: 20px 25px;
+  }
+
   header nav .nav-sections {
+    grid-area: sections;
     display: block;
     visibility: visible;
     white-space: nowrap;
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
   }
 
   header nav[aria-expanded='true'] .nav-sections {
@@ -198,39 +248,21 @@ header nav .nav-sections ul > li > ul > li {
 
   header nav .nav-sections .nav-drop {
     position: relative;
-    padding-right: 16px;
     cursor: pointer;
-  }
-
-  header nav .nav-sections .nav-drop::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 0.5em;
-    right: 2px;
-    transform: rotate(135deg);
-    width: 6px;
-    height: 6px;
-    border: 2px solid currentcolor;
-    border-radius: 0 1px 0 0;
-    border-width: 2px 2px 0 0;
-  }
-
-  header nav .nav-sections .nav-drop[aria-expanded='true']::after {
-    top: unset;
-    bottom: 0.5em;
-    transform: rotate(315deg);
   }
 
   header nav .nav-sections ul {
     display: flex;
-    gap: 24px;
+    gap: 49px;
     margin: 0;
+    line-height: 20.8px;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li {
     flex: 0 1 auto;
     position: relative;
+    font-size: 16px;
+
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li > ul {
@@ -269,13 +301,155 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  padding: 8px 16px;
+  border: 1px solid #ccc;
+  border-radius: 21px;
+  display: inline-block;
+  margin-right: 4px;
+  text-decoration: none;
+  transition-property: all;
+  transition-duration: .5s;
+  transition-timing-function: ease-out;
 }
 
 .section.secondary {
   text-align: center;
-  flex-grow: 2;
   width: 100%;
   color: #fff;
   padding: 16px 0;
   background-color: var(--color-background-secondary);
+  border-top: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+}
+
+.section.secondary p {
+  font-weight: 500;
+  line-height: 19.6px;
+  margin: 0;
+}
+
+header .section.top {
+  font-size: var(--body-font-size-m);
+  border: none;
+  padding: 0;
+}
+
+header .section.top div {
+  display: grid;
+  grid-template:
+    'top top top' auto
+    'l1 l2 search' auto / 42% 42% 16%;
+}
+
+header .section.top div p {
+  grid-area: top;
+  text-align: left;
+}
+
+header .section.top div p .button {
+  float: left;
+  margin-left: 16px;
+}
+
+header .section.top div ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: var(--body-font-size-s);
+  background-color: #e9e9e9;
+}
+
+header .section.top div ul:first-of-type {
+  justify-content: space-around;
+  cursor: pointer;
+}
+
+header .section.top div ul:nth-of-type(2) li {
+  padding-top: 3px;
+  padding-right: 20px;
+}
+
+header .section.top div ul:first-of-type li:first-of-type {
+  width: 50%;
+  background-color: #333;
+  color: #fff;
+  border-right: 1px solid #e1e1e1;
+  justify-content: center;
+  padding: 7px 0;
+}
+
+header .section.top div ul:first-of-type li:nth-of-type(2) {
+  width: 50%;
+  background-color: #cbcbcb;
+  justify-content: center;
+  padding: 7px 0;
+}
+
+header .section.top div ul:nth-of-type(2) li a {
+  color: #333;
+}
+
+header .section.top div ul:nth-of-type(2) li a:hover,
+header .section.top div ul:nth-of-type(2) li a:focus {
+  text-decoration: underline;
+}
+
+header .section.top div ul:nth-of-type(2) li:last-child {
+  padding-right: 10px;
+}
+
+header .section.top div ul:first-of-type li:nth-of-type(2) a {
+  color: #666;
+}
+
+header .section.top div ul:first-of-type li:nth-of-type(2):hover {
+  background-color: #333f48;
+}
+
+header .section.top div ul:first-of-type li:nth-of-type(2):hover a {
+  color: #fff;
+}
+
+header .section.top div ul:nth-of-type(2) {
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+}
+
+header .section.top div img {
+  max-height: 14px;
+  width: auto;
+}
+
+header .section.secondary.top1 p {
+  font-weight: 400;
+}
+
+header .section.top.top1 > div {
+  font-weight: 400;
+  display: flex;
+  gap: 4px;
+  align-items: flex-start;
+  padding: 10px 20px 10px 10px;
+}
+
+header .section.top.top1 > div p {
+  line-height: 36px;
+}
+
+header .section.top.top1 > div a.button {
+  text-transform: none;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 18.2px;
+  padding: 9px 20px;
+  margin: 0;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+}
+
+header .section.top.top2 {
+  line-height: 18.2px;
 }
