--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,6 +99,7 @@ html {
 
 body {
   display: none;
+  background-color: #d6d6d6;
   margin: 0;
   color: var(--text-color);
   font-family: var(--body-font-family);
@@ -268,6 +269,7 @@ main img {
 
 /* sections */
 main > .section {
+  background-color: #fafafa;
   max-width: var(--max-content-size);
   margin: auto;
 }
