--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -160,8 +160,6 @@ header nav .nav-brand img {
 header nav .nav-sections {
   grid-area: sections;
   flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
 }
 
 header nav .nav-tools img {
@@ -237,8 +235,6 @@ header nav .nav-sections ul > li > ul > li {
     display: block;
     visibility: visible;
     white-space: nowrap;
-    padding-top: 10px;
-    padding-bottom: 20px;
     padding-left: 10px;
   }
 
@@ -262,26 +258,28 @@ header nav .nav-sections ul > li > ul > li {
     flex: 0 1 auto;
     position: relative;
     font-size: 16px;
-
+    padding-top: 10px;
+    padding-bottom: 20px;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li > ul {
-    display: none;
+    /* display: none; */
     position: relative;
   }
 
   header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul {
-    display: block;
+    display: flex;
+    flex-direction: row;
     position: absolute;
     left: -24px;
     width: 200px;
     top: 150%;
     padding: 16px;
-    background-color: var(--light-color);
+    background-color: white;
     white-space: initial;
   }
 
-  header nav .nav-sections .default-content-wrapper > ul > li > ul::before {
+  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul::before {
     content: '';
     position: absolute;
     top: -8px;
@@ -292,9 +290,102 @@ header nav .nav-sections ul > li > ul > li {
     border-right: 8px solid transparent;
     border-bottom: 8px solid var(--light-color);
   }
-
-  header nav .nav-sections .default-content-wrapper > ul > li > ul > li {
+  
+  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul > li {
     padding: 8px 0;
+  }
+
+  header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul > li > ul {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+  }
+
+  .section.menu.columns-container {
+    background-color: #fff;
+    display: none;
+    flex-flow: row wrap;
+    align-self: flex-start;
+    gap: 12px;
+    z-index: 25000;
+    padding: 20px 10px 0;
+    width: auto;
+    position: absolute;
+    left: 15%;
+    top: 200px;
+  }
+
+  .section.menu.columns-container::before {
+    border-bottom: 16px solid #e9e9e9;
+    border-left: 19px solid transparent;
+    border-right: 19px solid transparent;
+    left: 175px;
+    top: -12px;
+    content: "";
+    height: 0;
+    position: absolute;
+    width: 0;
+  }
+
+
+  .section.menu.columns-container > div {
+    display: inline-block;
+    flex-grow: 1;
+  }
+  
+  .section.menu.columns-container img {
+    width: 50px;
+    height: auto;
+  }
+  
+  .section.menu.columns-container p {
+    margin: 0;
+    padding: 0;
+    color: #6c6c6c;
+  }
+
+  .section.menu.columns-container a {
+    color: var(--text-color);
+    font-weight: 500;
+    text-decoration: none;
+  }
+
+  .section.menu.columns-container a:hover {
+    text-decoration: underline;
+  }
+
+  .section.menu.columns-container .columns > div {
+    margin-bottom: 5px;
+  }
+
+  .section.menu.columns-container .columns > div > div:first-child {
+    flex-shrink: 1;
+  }
+
+  .section.menu.columns-container .columns > div > div:last-child {
+    flex-grow: 3;
+  }
+
+  .section.menu.columns-container .columns > div > div:first-child > p > a {
+    color: #333;
+    font-size: 14px;
+    font-weight: 300;
+    text-decoration: none;
+    float: inline-end;
+  }
+
+  .section.menu.columns-container .columns > div > div:first-child > p > a:hover {
+    text-decoration: underline;
+  }
+
+  .section.menu.columns-container .columns > div > div:first-child > p {
+    border-bottom: 2px solid #dedede;
+    padding-bottom: 5px;
+    margin: 10px 0 10px 10px;
+    clear: both;
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
   }
 }
 
@@ -338,7 +429,7 @@ header .section.top div {
   display: grid;
   grid-template:
     'top top top' auto
-    'l1 l2 search' auto / 42% 42% 16%;
+    'l1 l2 search' auto / 42% auto 221px;
 }
 
 header .section.top div p {
@@ -415,6 +506,7 @@ header .section.top div ul:nth-of-type(2) {
   justify-content: center;
   align-items: center;
   font-size: 13px;
+  margin-right: 9px;
 }
 
 header .section.top div img {
@@ -427,11 +519,24 @@ header .section.secondary.top1 p {
 }
 
 header .section.top.top1 > div {
+  position: relative;
   font-weight: 400;
   display: flex;
   gap: 4px;
   align-items: flex-start;
   padding: 10px 20px 10px 10px;
+}
+
+header .section.top.top1 > div .icon {
+  display: block;
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  margin: 0;
+  padding: 0;
+  width: 14px;
+  height: 14px;
+  line-height: 0;
 }
 
 header .section.top.top1 > div p {
@@ -452,4 +557,54 @@ header .section.top.top1 > div a.button {
 
 header .section.top.top2 {
   line-height: 18.2px;
+}
+
+header .section.top.top2.search {
+  background-color: #e9e9e9;
+}
+
+header .section.top.top2 .nav-search {
+  display: flex;
+  background-color: #e9e9e9;
+}
+
+header .section.top.top2 .nav-search input[type="text"]{
+  flex-grow: 1;
+  font-size: 16px;
+  padding: 6px 5px 5px;
+  box-shadow: none;
+  border: 1px solid #cbcbcb;
+  box-sizing: border-box;
+  border-radius: 0;
+  width: auto;
+  height: 32px;
+}
+
+header .section.top.top2 .nav-search input[type="text"]::placeholder {
+  color: #b5bbb8;
+}
+
+header .section.top.top2 .nav-search input[type="submit"]{
+  background-image: url('/icons/search.svg');
+  background-repeat: no-repeat;
+  background-position: 50%;
+  width: 30px;
+  height: 32px;
+  color: #fff;
+  background-color: #333f48;
+  border: 1px solid #333f48;
+  border-top-width: .5px;
+  border-top-color: #cbcbcb;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  transition: all .2s ease;
+  vertical-align: middle;
+  white-space: normal;
+}
+
+header nav .nav-sections .default-content-wrapper > ul > li[aria-expanded='true'] > ul > li > ul img {
+  width: 50px;
+  height: auto;
 }
