Unset section background color

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,3 +1,7 @@
+.section.hero-container {
+  background-color: unset;
+}
+
 .hero-container .hero-wrapper {
   /* max-width: unset; */
   padding: 0;
